--- a/akademik.html
+++ b/akademik.html
@@ -11,8 +11,8 @@
     <style>
        
         body {
-          background-image: url(img/a.avif);
-         background-size: cover;
+          background-image: url(https://img.freepik.com/free-vector/hand-drawn-japanese-illustration-cranes_23-2149601826.jpg?w=996&t=st=1681472074~exp=1681472674~hmac=619ba57a011374119a0eca4643c1be3c4fdbeb0dfac225e373e52224b7099b86);
+         background-size:unset;
          background-repeat: no-repeat;
          background-position: center;
         }
@@ -36,7 +36,6 @@
   
  
     <img src="img/ac.png" class="photo">
-
 
 </body>
 </html>
