--- a/globalai.html
+++ b/globalai.html
@@ -22,14 +22,15 @@
         <a href="#" class="selin">SELİN</a>
     </header>
      <!-- btns5 -->
-    <div class="button-group">    
-        <a href="https://globalaihub.com/activity/" class="btn-s4" target="_blank">GLOBAL AI</a>
-        <a href="https://globalaihub.com/courses/introduction-to-python/" class="btn-s5" target="_blank"> Introduction to Python</a>
-        <a href="  https://docs.google.com/forms/d/e/1FAIpQLSdEW5XfsvHJ9cF_a5krUAhd49TCEamb0TPJzfNdd14ZArLF-Q/viewform" class="btn-s5" target="_blank"> Nisan Son</a>
+    <div class="button-group"> 
+
+        <a href="https://globalaihub.com/members/selinpir/" class="btn-s4" target="_blank">GLOBAL AI</a>
+   
+        <a href="https://www.youtube.com/@TurkishAIHub/streams" class="btn-s5" target="_blank">python</a>
+
        
         <a href="index.html" class="btn-s4">GERİ DÖN</a>
     </div>
     <img src="img/ai.png" class="photo">
 </body>
 </html>
- 
