--- a/patika.html
+++ b/patika.html
@@ -24,8 +24,8 @@
     </header>
     <!-- btns1 -->
     <div class="button-group">    
-        <a href="https://app.patika.dev/paths" class="btn-s4" target="_blank">PATİKA</a>
-        <a href="https://cohorts.patika.dev/" class="btn-s1" target="_blank">Cohorts</a>
+        <a href="https://academy.patika.dev/dashboard" class="btn-s4" target="_blank">PATİKA</a>
+        <!-- <a href="https://cohorts.patika.dev/" class="btn-s1" target="_blank">Cohorts</a> -->
         <a href="https://app.patika.dev/courses/oop" class="btn-s1" target="_blank">Object Oriented Programming</a>
         <a href="https://app.patika.dev/courses/visual-studio-code-kullanimi" class="btn-s1" target="_blank">Visual Studio Code Kullanımı</a>
         <a href="https://app.patika.dev/courses/javascript" class="btn-s1" target="_blank">JavaScript</a>
